# AutoMail

./: CMakeLists.txt  README.md
app/: AutoMailCompletion.cpp  AutoMailCompletion.sh  main.cpp
include/: utils.h
ods/: ods.cc
sample/: simpson_sample.odt.ods  text.txt
src/: utils.cpp
